--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@portabletext/react": "^4.0.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/client": "^7.12.0",
+    "@sanity/image-url": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.5",
+    "next-sanity": "^11.6.2",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.64.0",
+    "sanity": "^4.11.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
