Enhance middleware and update package dependencies
- Updated the middleware to skip processing for paths starting with '/studio', improving performance for the Sanity Studio.
- Added new dependencies: @isaacs/brace-expansion and @sanity/vision to enhance functionality.
- Updated TypeScript definitions for @types/node and @types/react to their latest versions, ensuring compatibility and improved type safety.

These changes optimize middleware behavior and keep dependencies up to date for better project stability.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@isaacs/brace-expansion": "^5.0.0",
     "@portabletext/react": "^4.0.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -19,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,8 +39,8 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^24.6.2",
-    "@types/react": "^19.1.16",
+    "@types/node": "24.9.1",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
