--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.5",
     "next-sanity": "^11.6.2",
-    "react": "^19.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.64.0",
     "sanity": "^4.11.0",
     "sonner": "^2.0.7",
@@ -40,8 +40,8 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "24.9.1",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "autoprefixer": "^10.4.21",
