--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.64.0",
+    "rough-notation": "^0.5.1",
     "sanity": "^4.11.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
