--- a/.env.local.example
+++ b/.env.local.example
@@ -3,6 +3,7 @@
 NEXT_PUBLIC_SANITY_PROJECT_ID="your_project_id"
 NEXT_PUBLIC_SANITY_DATASET="production"
 NEXT_PUBLIC_SANITY_API_VERSION="2025-01-26"
+SANITY_API_WRITE_TOKEN="your_token_here"
 
 # Optional: For draft/preview mode
 # SANITY_API_READ_TOKEN="your_read_token"
